<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E6295C77"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/app_name"
        android:fontFamily="@font/lemonmilk"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="#FDFBF6"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/paradamain" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/opt1"
        android:fontFamily="@font/lemonmilk"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textStyle="bold"
        android:onClick="ejecutarAgregar"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:text="@string/opt2"
        android:fontFamily="@font/lemonmilk"
        android:textSize="15sp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textStyle="bold"
        android:onClick="ejecutarLista"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:text="@string/opt3"
        android:fontFamily="@font/lemonmilk"
        android:textSize="15sp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textStyle="bold"
        android:onClick="ejecutarAcercaDe"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:text="@string/opt4"
        android:fontFamily="@font/lemonmilk"
        android:textSize="15sp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textStyle="bold"
        android:onClick="ejecutarSalir"
        android:layout_height="wrap_content"/>

</LinearLayout>